2019-1/221/users/4122/executions/1579_2896.log
== TEST (2019-03-13 10:24:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:Carlinha")

# Impressao de saidas
print()
-- ERROR:
File "XXXX", line 1
    print(Bruce Wayne")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:25:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:Carlinha")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:26:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:Ayna ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 10:26:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Ayna ")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.145175
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Digite o nome: Ayna Teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:26:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Digite o nome:"Ayna ")

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input(Digite o nome:"Ayna ")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:27:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Digite o nome:"Ayna")

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input(Digite o nome:"Ayna")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:27:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:Ayn"""")

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 8
    print(var)
             ^
SyntaxError: EOF while scanning triple-quoted string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:29:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Ayna")


# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 10:29:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Ayna")


# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.159707
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:26:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: Ayna")


# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
